# spammingbitcoin

./: .env.example  .gitignore  README.md  pyproject.toml
apps/demo_site/static/memes/: manifest.json
deploy/: Caddyfile
docs/: pow-tuning-findings.md  site-owners.md
scripts/: fetch_memes.py  gen_testnet4_wallet.py  install_caddy_service.sh  run_dev.sh
src/x402_pow/: __init__.py  config.py  memes.py
src/x402_pow/apps/: __init__.py  demo_site.py  pool_api.py  pool_signup.py  static_mine_share.py  whitepaper_site.py
src/x402_pow/apps/static/: mine_share.py
src/x402_pow/facilitator/: settle.py
src/x402_pow/ledger/: db.py
src/x402_pow/payouts/: __init__.py  blink.py  service.py
src/x402_pow/pool/: metrics.py
src/x402_pow/pow/: access_tiers.py  hashing.py  jobs.py  meme_votes.py
src/x402_pow/publishers/: service.py
src/x402_pow/scheme/: media_tokens.py  payment.py  receipts.py  vote_tokens.py
src/x402_pow/scripts/: mine_share.py
src/x402_pow/stratum/: edge.py  upstream.py
src/x402_pow/web/: jinja.py
templates/demo_site/: bench.html  index.html  leaderboard.html  paywall.html  unlocked.html
templates/partials/: access_miner_script.html  masthead.html
templates/pool_api/: dashboard.html
templates/pool_signup/: balance.html  balance_result.html  credentials.html  portal.html  signup.html
templates/whitepaper_site/: index.html  paywall.html  unlocked.html
